force-app/main/default/objects/Account/fields/Have_they_paid__c.field-meta.xml
<CustomField>
    <fullName>Have_they_paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have they paid?</label>
    <type>Checkbox</type>
</CustomField>