force-app/main/default/objects/Account/fields/Products_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Products_Interested_In__c</fullName>
    <label>Products Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skis</fullName>
            </value>
            <value>
                <fullName>Bicycles</fullName>
            </value>
            <value>
                <fullName>Ski Boots</fullName>
            </value>
            <value>
                <fullName>Ski Poles</fullName>
            </value>
            <value>
                <fullName>Helmets</fullName>
            </value>
            <value>
                <fullName>Goggles</fullName>
            </value>
            <value>
                <fullName>Snow Suits</fullName>
            </value>
            <value>
                <fullName>Long Johns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>