force-app/main/default/objects/Account/recordTypes/Manufacturer.recordType-meta.xml
<RecordType>
    <fullName>Manufacturer</fullName>
    <active>true</active>
    <label>Manufacturer</label>
</RecordType>