force-app/main/default/objects/Account/recordTypes/Supllier.recordType-meta.xml
<RecordType>
    <fullName>Supllier</fullName>
    <active>true</active>
    <label>Supllier</label>
</RecordType>